kbase-extension/static/kbase/css/kbaseNarrative.css
@import url("//fonts.googleapis.com/css?family=Roboto");

.kb-dropzone div#upload-message {
    font-family: "OxygenBold", Arial, sans-serif;
}

.kb-data-staging-table-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.kb-data-staging-footer {
    font-family : "OxygenBold", Arial, sans-serif;
    font-size : 105%;
    text-align : center;
    background-color : #EEEEEE;
    height : 32px;
    padding : 8px;
}

.kb-data-staging-metadata-list {
  font-family : 'OxygenBold';
  width : 115px;
  display : inline-block;
  font-size : 90%;
}

.kb-data-staging-metadata-file-lines {
  white-space : pre;
 overflow : scroll;
 font-family : monospace;
 font-size : 90%;
 background-color : #DDDDDD;
 max-height : 200px;
}

.kb-dropzone {
    border: 2px dashed #2196F3 !important;
    margin-bottom:5px;
    max-height: 150px;
    overflow-y: auto;
}

.kb-ga-seq {
    word-wrap: break-word;
    font-family: monospace;
    max-width: 300px;
    max-height: 100px;
    overflow-y: auto;
}

/**
 * Shim to make sure jQuery-ui dialogs are always on front of other DOM elements.
 */
.ui-front {
    z-index: 1000;
}

.whiteout-pane {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #fff;
    text-align: center;
    z-index: 1001;
}

#kb-narr-name {
    font-style: italic;
    font-family: 'OxygenBold';
    font-size: 130%;
    padding-bottom: 7px;
}

#kb-narr-name > #save_widget {
    font-style: normal;
    font-family: 'OxygenBold';
    padding: 0;
}

#kb-narr-creator {
    font-family: 'OxygenBold';
}

.kb-narr-namestamp {
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 20px;
    border-left: 2px solid #CECECE;
    display: block;
}

.ui-draggable.kb-data-inflight {
    display: block;
    border: 2px gray solid;
    background-color: #FEFFD6 !important;
    border-radius: 4px;
    z-index: 1000;
}
.ui-draggable.kb-data-inflight.-over {
    border-color: green;
    background-color: #EFFCEB !important;
}

.kb-data-list-drag-target {
    transition: all 0.25s ease;
}

.kb-data-list-drag-target.-drag-active {
    background-color: #FEFFD6;
}

.kb-data-list-drag-target.-drag-hover {
    background-color: #EFFCEB;
    border-color: green;

}
.kb-data-list-drag-target.-drag-hover {
    height: 90px;
    transition: all 0.25s ease;
}

.kb-data-list-drag-target {
    display: block;
    border: 2px orange dashed;
    height: 40px;
    text-align: center;
    padding: 6px;
    border-radius: 4px;
}

#kb-notify-area {
    display: inline-block;
    float: left;
    position: relative;
}

.kb-navbar-buttons {
    display: inline-block;
    padding-right: 15px;
    margin-right: 15px;
    border-right: 2px solid #CECECE;
}

header[role="banner"] {
    position: absolute;
    top: 0;
    width: 100%;
    background-color: #fff;
    border-bottom: 1px solid #CECECE;
    z-index: 999;

}

nav[role="navigation"] ul {
    margin: 1.2em 0 .5em 0;
    /*text-align: center;*/
    padding-left: 0;
}

nav[role="navigation"] ul li {
    display: inline;
    margin: 0 .5em;
    vertical-align: middle;
}

nav[role="navigation"] ul li a {
    text-decoration: none;
    font-size: 1.2em;
    font-family: 'OxygenBold';
    padding: 7px 1em;
    background-color: #5c9531;
    color: #fff;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
    border: 1px solid #5c9531;
}

li#searchlabel a{
 }

input#search_terms{
    padding: .4em 1em;
    display: inline;
    border-color: #5c9531;
    position: relative;
    left: -.5em;
    font-size: 1em;
    margin-top: -3px;
    background-image: url("../images/search.png");
    background-size: 22px;
    background-repeat:no-repeat;
    background-position:right center;
    border-top-left-radius: 0px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 0px;
}
span#searchspan{
    display: inline-block;
    width: 50%;
}
@media screen and (max-width: 1170px){
    span#searchspan{width: 50%;}
}
@media screen and (max-width: 980px){
    span#searchspan{width: 40%;}
}
@media screen and (max-width: 768px){
    span#searchspan{width: 30%;}
}
@media screen and (max-width: 590px){
    span#searchspan{width: 60%;}
}


.navbar-kbase {
    border-bottom: 5px solid #CECECE !important;
    padding: 8px;
}

.navbar-kbase a:hover {
    cursor: pointer;
}

/* Top bar nav buttons
   --------------------------
*/
.kb-nav-btn {
    background-color: #FFF;
    padding: 1px 7px;
    font-size: 24px;
    border: none;
    text-shadow: none !important;
    margin: 0;
    box-shadow: 0 0 3px #CECECE;
    margin-right: 5px;
    min-width: 50px;
}
.navbar-right .fa::before { /* color nav icons */
    color: #2196F3;
}
#kb-nav-menu { /* don't add shadows here */
    box-shadow: none;
}
.kb-nav-btn > div {
    color: #666 !important;
}
.kb-nav-btn .kb-nav-btn-txt {
    font-size: 10pt;
    margin-top: -5px;
}
.navbar-right .kb-nav-btn:hover {
    background-color: #F5F5F5;
}
.kb-nav-btn-upgrade {
    background-color: #4BB856 !important;
    display: none;
}
.kb-nav-btn-upgrade .fa::before {
    color: #FFF !important;
}
.kb-nav-btn-upgrade > div {
    color: #FFF !important;
}
.kb-nav-btn-upgrade:hover {
    background-color: #43A047 !important;
}
.kb-nav-btn-upgrade.warning {
    background-color: #F44336 !important;
}
.kb-nav-btn-upgrade.warning:hover {
    background-color: #DC3C31 !important;
}
.kb-nav-menu-icon {
    display: inline-block;
    width: 20px;
    text-align: center;
    vertical-align: middle;
    margin-right: 5px;
}
.kb-nav-menu-icon .fa {
    font-size: 150%;
}

#kb-ipy-menu { /* restore rounded corners */
  border-radius: 4px !important;
  margin-right: 0;
}
/* ... */

